4 servises tested